--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -12,6 +12,41 @@
 
   /* Index Layout을 위한 그리드 관련 변수 */
   --lion: repeat(auto-fit, minmax(200px, 1fr));
+  --animate-wobble: wobble 0.6s infinite ease-in-out;
 
-  --color-edi: #000;
+  @keyframes wobble {
+    0%,
+    100% {
+      transform: translateX(0%);
+    }
+    15% {
+      transform: translateX(-25%) rotate(-5deg);
+    }
+    30% {
+      transform: translateX(20%) rotate(3deg);
+    }
+    45% {
+      transform: translateX(-15%) rotate(-3deg);
+    }
+    60% {
+      transform: translateX(10%) rotate(2deg);
+    }
+    75% {
+      transform: translateX(-5%) rotate(-1deg);
+    }
+  }
 }
+
+@layer components {
+  .notice {
+    @apply flex border-4 border-green-700 bg-blue-950;
+
+    > div {
+      @apply relative w-[150px] p-4 text-white;
+    }
+  }
+}
+
+/* @utility{
+
+} */
