--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -14,25 +14,36 @@
   --lion: repeat(auto-fit, minmax(200px, 1fr));
   --animate-wobble: wobble 0.6s infinite ease-in-out;
 
+  /* 이디야 기본 블로 */
+  --color-ediya-blue-100: #a7d1e7;
+  --color-ediya-blue-200: #2c68ae;
+  --color-ediya-blue-300: #24388d;
+  /* 원형 그라디언트 변수 */
+  --ediya-blue: linear-gradient(
+    -45deg,
+    var(--color-ediya-blue-200),
+    var(--color-ediya-blue-300)
+  );
+
   @keyframes wobble {
     0%,
     100% {
-      transform: translateX(0%);
+      transform: translateX(0%) rotate(0deg);
     }
     15% {
-      transform: translateX(-25%) rotate(-5deg);
+      transform: translateX(-15px) rotate(-5deg);
     }
     30% {
-      transform: translateX(20%) rotate(3deg);
+      transform: translateX(10px) rotate(3deg);
     }
     45% {
-      transform: translateX(-15%) rotate(-3deg);
+      transform: translateX(-10px) rotate(-3deg);
     }
     60% {
-      transform: translateX(10%) rotate(2deg);
+      transform: translateX(5px) rotate(2deg);
     }
     75% {
-      transform: translateX(-5%) rotate(-1deg);
+      transform: translateX(-5px) rotate(-1deg);
     }
   }
 }
@@ -42,11 +53,7 @@
     @apply flex border-4 border-green-700 bg-blue-950;
 
     > div {
-      @apply relative w-[150px] p-4 text-white;
+      @apply relative w-[200px] p-4 text-white;
     }
   }
 }
-
-/* @utility{
-
-} */
